# polaros

./: .copycat  .gitignore  Cargo.toml  README.md  copycat.md  deploy.ps1  systemoperacyjny.vdi  x86_64-myos.json
.cargo/: config.toml
.claude/: settings.local.json
src/: lib.rs  main.rs
src/drivers/: ata.rs  keyboard.rs  mod.rs  mouse.rs  serial.rs  vga.rs
src/fs/: fat.rs  mod.rs  ramfs.rs
src/gui/: compositor.rs  cursor.rs  event.rs  font.rs  framebuffer.rs  mod.rs  palette.rs  primitives.rs  theme.rs  wallpaper.rs
src/gui/widget/: button.rs  desktop.rs  label.rs  mod.rs  panel.rs  terminal.rs  window.rs
src/kernel/: elf.rs  gdt.rs  idt.rs  mod.rs  pic.rs  timer.rs
src/kernel/memory/: frame_allocator.rs  heap.rs  mod.rs
src/kernel/syscall/: handlers.rs  mod.rs  userprogs.rs
src/kernel/task/: context.rs  mod.rs  scheduler.rs
src/shell/: commands.rs  completion.rs  mod.rs
