[package]
name = "systemoperacyjny"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "=0.9.23", features = ["map_physical_memory", "vga_320x200"] }
font8x8 = { version = "0.2.7", default-features = false }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "=0.14.12"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
uart_16550 = "0.2.19"
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
xmas-elf = "0.9.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
